--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "An object oriented terminal game engine"
 authors = [
     { name = "FloatingInt", email = "knutolaihelgesen@gmail.com" }
 ]
-dependencies = []
+dependencies = [
+    "linflex~=0.1.3",
+]
 readme = "README.md"
 requires-python = ">= 3.10"
 
