--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ authors = [
 ]
 dependencies = [
     "linflex~=0.1.3",
-    "colex~=0.1.0",
+    "colex~=0.2.0",
+    "keyboard~=0.13.5",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
