--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "linflex~=0.1.3",
     "colex~=0.2.0",
     "keyboard~=0.13.5",
+    "typing-extensions>=4.4.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
@@ -45,7 +46,7 @@ select = [
     "W",      # pycodestyle :: warning
     "UP",     # pyupgrade
     "PL",     # pylint
-    "D",      # pydocstye
+    "D",      # pydocstyle
     "C901",   # mccabe :: complex-structure
     "ISC",    # flake8-implicit-str-concat
     "ANN",    # flake8-annotations
