--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "charz"
-dynamic = ["version"]
+version = "0.0.22"
 description = "An object oriented terminal game engine"
 authors = [
     { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
@@ -8,7 +8,7 @@ authors = [
 dependencies = [
     "linflex~=0.1.3",
     "colex~=0.2.0",
-    "keyboard~=0.13.5",
+    "keyboard>=0.13.5",
     "typing-extensions>=4.4.0",
 ]
 readme = "README.md"
