--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "charz"
 version = "0.0.22"
 description = "An object oriented terminal game engine"
 authors = [
-    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
+    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
 ]
 dependencies = [
     "linflex~=0.1.3",
@@ -20,9 +20,7 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = [
-    "mypy>=1.10.0",
-]
+dev-dependencies = []
 
 [tool.hatch.version]
 path = "charz/__init__.py"
@@ -63,7 +61,6 @@ select = [
 ignore = [
     # Project spesific rules to ignore
     "ANN204",  # flake8-annotations :: missing-return-type-special-method :!: __new__ in this project has to return special types
-    "PLC0105", # type-name-incorrect-variance :!: TypeVar is used instead of Self (py 3.11+ feature mimicked in 3.10)
     # Rules that I do not know why it gives of a warning
     "ISC001",  # single-line-implicit-string-concatenation
     # Rules I ignore across projects
@@ -82,7 +79,8 @@ ignore = [
 
 [tool.ruff.lint.extend-per-file-ignores]
 "__init__.py" = ["D205", "D212"] # Allow module docstring content to start at second line
-"annotations.py" = ["D205", "D212"] # Allow module docstring content to start at second line
+"_annotations.py" = ["D205", "D212"] # Allow module docstring content to start at second line
+"text.py" = ["D205", "D212"] # Allow module docstring content to start at second line
 
 [tool.ruff.lint.mccabe]
 max-complexity = 7
