--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "typing-extensions>=4.4.0",
 ]
 readme = "README.md"
+license.file = "LICENSE.txt"
 requires-python = ">= 3.10"
 
 [build-system]
