--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ authors = [
 ]
 dependencies = [
     "colex~=0.2.0",
-    "keyboard>=0.13.5",
     "linflex~=0.1.3",
     "typing-extensions>=4.4.0",
 ]
@@ -15,13 +14,19 @@ readme = "README.md"
 license.file = "LICENSE.txt"
 requires-python = ">= 3.10"
 
+[project.optional-dependencies]
+keyboard = [ "keyboard>=0.13.5" ]
+all = [ "keyboard>=0.13.5" ]
+
 [build-system]
 requires = ["hatchling==1.26.3"]
 build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "keyboard>=0.13.5",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
