--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "keyboard>=0.13.5",
+    "pytest>=8.3.4",
 ]
 
 [tool.hatch.metadata]
