--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "charz"
-version = "0.0.40"
+version = "0.0.41"
 description = "An object oriented terminal game engine"
 authors = [
     { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
@@ -17,10 +17,7 @@ requires-python = ">= 3.10"
 [project.optional-dependencies]
 keyboard = [ "keyboard>=0.13.5" ]
 controller = [ "pygame~=2.1" ]
-all = [
-    "keyboard>=0.13.5",
-    "pygame~=2.1",
-]
+all = [ "keyboard>=0.13.5", "pygame~=2.1" ]
 
 [build-system]
 requires = ["hatchling==1.26.3"]
