--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ dev.py
 dev.txt
 dev[0-9].py
 beta-dist
-test-animations
+test-animations/
 ecs_dev.py
+charz-core-latest/
 
 # temp
 _controller_support.py
