--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [project]
 name = "charz"
-version = "0.0.41"
+version = "0.1.0.dev0"
 description = "An object oriented terminal game engine"
 authors = [
     { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
 ]
 dependencies = [
+    "charz-core==0.1.0.dev2",
+    "typing-extensions>=4.4.0",
     "colex~=0.3.0",
     "linflex~=0.2.0",
-    "typing-extensions>=4.4.0",
 ]
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -16,8 +17,8 @@ requires-python = ">= 3.10"
 
 [project.optional-dependencies]
 keyboard = [ "keyboard>=0.13.5" ]
-controller = [ "pygame~=2.1" ]
-all = [ "keyboard>=0.13.5", "pygame~=2.1" ]
+controller = [ "pygame~=2.0" ]
+all = [ "keyboard>=0.13.5", "pygame~=2.0" ]
 
 [build-system]
 requires = ["hatchling==1.26.3"]
@@ -28,7 +29,7 @@ managed = true
 dev-dependencies = [
     "keyboard>=0.13.5",
     "pytest>=8.3.4",
-    "pygame~=2.1",
+    "pygame~=2.0",
 ]
 
 [tool.hatch.metadata]
