Removed not implemented feature, contoller

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,7 @@ requires-python = ">= 3.10"
 
 [project.optional-dependencies]
 keyboard = [ "keyboard>=0.13.5" ]
-controller = [ "pygame~=2.0" ]
-all = [ "keyboard>=0.13.5", "pygame~=2.0" ]
+all = [ "keyboard>=0.13.5" ]
 
 [build-system]
 requires = ["hatchling==1.26.3"]
@@ -27,7 +26,6 @@ managed = true
 dev-dependencies = [
     "keyboard>=0.13.5",
     "pytest>=8.3.4",
-    "pygame~=2.0",
 ]
 
 [tool.hatch.metadata]
