Edited verioning pin for build system

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ keyboard = [ "keyboard>=0.13.5" ]
 all = [ "keyboard>=0.13.5" ]
 
 [build-system]
-requires = ["hatchling==1.26.3"]
+requires = ["hatchling~=1.26.0"]
 build-backend = "hatchling.build"
 
 [tool.rye]
