--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
 ]
 dependencies = [
-    "charz-core==0.1.0",
+    "charz-core~=0.1.0",
     "colex~=0.3.0",
 ]
 readme = "README.md"
