--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "charz"
-version = "0.1.0.dev4"
+version = "0.1.0"
 description = "An object oriented terminal game engine"
 authors = [
     { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
