--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,9 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "keyboard>=0.13.5",
-    "pytest>=8.3.4",
+    "pytest~=8.3",
     "pydoc-markdown~=4.8",
-    "pydoc-markdown-havsalt==0.1.0",
+    "pydoc-markdown-havsalt~=0.1.0",
 ]
 
 [tool.hatch.metadata]
