--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["uv_build~=0.8.15"]
+build-backend = "uv_build"
+
 [project]
 name = "charz"
 version = "0.1.2"
@@ -36,24 +40,13 @@ classifiers = [
 keyboard = [ "keyboard>=0.13.5" ]
 all = [ "keyboard>=0.13.5" ]
 
-[build-system]
-requires = ["hatchling~=1.26.0"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "keyboard>=0.13.5",
     "pytest~=8.3",
     "pydoc-markdown~=4.8",
     "pydoc-markdown-havsalt~=0.1.0",
 ]
-
-[tool.hatch.metadata]
-allow-direct-references = true
-
-[tool.hatch.build.targets.wheel]
-packages = ["charz"]
 
 [[tool.pydoc-markdown.loaders]]
 type = "python"
